--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -6471,7 +6471,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qc6-MJ-881">
-                                <rect key="frame" x="13" y="70" width="350" height="50"/>
+                                <rect key="frame" x="13" y="70" width="350" height="45"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oct 2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tLY-ps-oLS">
                                         <rect key="frame" x="8" y="8" width="250" height="30"/>
@@ -6498,7 +6498,7 @@
                                     <constraint firstItem="lrI-65-ZRL" firstAttribute="top" secondItem="qc6-MJ-881" secondAttribute="top" constant="15" id="9Kd-Ji-jsM"/>
                                     <constraint firstItem="tLY-ps-oLS" firstAttribute="leading" secondItem="qc6-MJ-881" secondAttribute="leading" constant="8" id="E0j-7B-XYa"/>
                                     <constraint firstAttribute="trailing" secondItem="lrI-65-ZRL" secondAttribute="trailing" constant="8" id="V9n-el-GyY"/>
-                                    <constraint firstAttribute="height" constant="50" id="woR-dG-ry9"/>
+                                    <constraint firstAttribute="height" constant="45" id="woR-dG-ry9"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vat-uX-Ow9">
@@ -6542,9 +6542,8 @@
                                     <action selector="Btnclk:" destination="X5X-MY-zBe" eventType="touchUpInside" id="TVL-Dm-ql8"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HwT-pO-PNB">
-                                <rect key="frame" x="13" y="125" width="350" height="520"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HwT-pO-PNB">
+                                <rect key="frame" x="13" y="130" width="350" height="535"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="X5X-MY-zBe" id="AgE-9b-h2a"/>
@@ -6555,7 +6554,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="jfc-pk-CSI" firstAttribute="trailing" secondItem="qc6-MJ-881" secondAttribute="trailing" constant="12" id="46c-uT-DH7"/>
-                            <constraint firstItem="vat-uX-Ow9" firstAttribute="top" secondItem="qc6-MJ-881" secondAttribute="bottom" constant="5" id="BJ5-uC-FAx"/>
+                            <constraint firstItem="HwT-pO-PNB" firstAttribute="top" secondItem="qc6-MJ-881" secondAttribute="bottom" constant="15" id="4cE-iZ-uvw"/>
+                            <constraint firstItem="HwT-pO-PNB" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" constant="13" id="6rs-lh-xec"/>
+                            <constraint firstItem="vat-uX-Ow9" firstAttribute="top" secondItem="qc6-MJ-881" secondAttribute="bottom" constant="10" id="BJ5-uC-FAx"/>
                             <constraint firstItem="jfc-pk-CSI" firstAttribute="trailing" secondItem="bNi-Cr-F8V" secondAttribute="trailing" constant="27" id="DpI-Py-xXb"/>
                             <constraint firstItem="XZH-lO-6my" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" id="HSE-0u-ahl"/>
                             <constraint firstItem="XZH-lO-6my" firstAttribute="top" secondItem="jfc-pk-CSI" secondAttribute="top" id="KiI-88-R9V"/>
@@ -6563,6 +6564,8 @@
                             <constraint firstItem="XZH-lO-6my" firstAttribute="trailing" secondItem="jfc-pk-CSI" secondAttribute="trailing" id="RrH-gN-sZ2"/>
                             <constraint firstItem="qc6-MJ-881" firstAttribute="top" secondItem="XZH-lO-6my" secondAttribute="bottom" constant="10" id="SaR-GM-2pB"/>
                             <constraint firstItem="bNi-Cr-F8V" firstAttribute="top" secondItem="vat-uX-Ow9" secondAttribute="bottom" constant="163" id="ToU-ez-JNd"/>
+                            <constraint firstItem="jfc-pk-CSI" firstAttribute="bottom" secondItem="HwT-pO-PNB" secondAttribute="bottom" constant="2" id="aQq-0H-toX"/>
+                            <constraint firstItem="jfc-pk-CSI" firstAttribute="trailing" secondItem="HwT-pO-PNB" secondAttribute="trailing" constant="12" id="fSQ-fE-BJ8"/>
                             <constraint firstItem="vat-uX-Ow9" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" id="jZB-Hv-7Lp"/>
                             <constraint firstItem="qc6-MJ-881" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" constant="13" id="xck-1A-dFd"/>
                         </constraints>
