--- a/FaceTek/Expense Claim's/ExpenseHeadercell.xib
+++ b/FaceTek/Expense Claim's/ExpenseHeadercell.xib
@@ -17,19 +17,39 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bandaru" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V9B-ar-wN2">
-                        <rect key="frame" x="28" y="12" width="92" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c0w-Wa-hEf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expense Claim Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOZ-8B-bcD">
+                                <rect key="frame" x="15" y="7" width="165" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="165" id="KbX-X0-JkW"/>
+                                    <constraint firstAttribute="height" constant="30" id="bcg-rt-AfJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="QOZ-8B-bcD" firstAttribute="top" secondItem="c0w-Wa-hEf" secondAttribute="top" constant="7" id="4Ca-QP-1hz"/>
+                            <constraint firstItem="QOZ-8B-bcD" firstAttribute="leading" secondItem="c0w-Wa-hEf" secondAttribute="leading" constant="15" id="sHq-BS-DHU"/>
+                        </constraints>
+                    </view>
                 </subviews>
-                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="c0w-Wa-hEf" secondAttribute="bottom" id="1At-oQ-aeH"/>
+                    <constraint firstItem="c0w-Wa-hEf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9oF-dw-00A"/>
+                    <constraint firstItem="c0w-Wa-hEf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Kuy-0s-wpZ"/>
+                    <constraint firstAttribute="trailing" secondItem="c0w-Wa-hEf" secondAttribute="trailing" id="xFX-cq-Ndq"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="ExpenseClaimLbl" destination="V9B-ar-wN2" id="KyR-Du-0tT"/>
+                <outlet property="ExpenseClaimLbl" destination="QOZ-8B-bcD" id="M6H-0b-y8f"/>
+                <outlet property="HeadercellBackVieew" destination="c0w-Wa-hEf" id="rNe-XJ-IxH"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="84.375"/>
         </tableViewCell>
