--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -5778,9 +5778,9 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Attendance History" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ox-aI-G6o">
-                                        <rect key="frame" x="71" y="10" width="175" height="25"/>
+                                        <rect key="frame" x="71" y="10" width="220" height="25"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="175" id="uLJ-lK-Vg0"/>
+                                            <constraint firstAttribute="width" constant="220" id="uLJ-lK-Vg0"/>
                                             <constraint firstAttribute="height" constant="25" id="wWD-pB-4hM"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -5966,6 +5966,7 @@
                     </view>
                     <connections>
                         <outlet property="AbsentLbl" destination="JgH-SM-rZg" id="bx9-xx-FJH"/>
+                        <outlet property="AttendanceHistorytitleLbl" destination="2ox-aI-G6o" id="T9A-ap-3Hp"/>
                         <outlet property="Fscalendarview" destination="S2n-PJ-NgV" id="MhR-yb-Sby"/>
                         <outlet property="HolidayLbl" destination="PdU-cQ-mLa" id="ZBO-AI-jgP"/>
                         <outlet property="LeaveLbl" destination="EFd-e2-IoO" id="aPE-GT-o10"/>
